# zkteco_attendance

./: LICENSE  pyproject.toml  requirements.txt
patches/: __init__.py
patches/v1_0/: __init__.py  create_default_roles.py
public/css/: zkteco_attendance.css
public/js/: zkteco_attendance.js
tests/: __init__.py  conftest.py  test_attendance_processor.py  test_device_communicator.py  test_employee_mapper.py  test_sync_engine.py
zkteco_attendance/: __init__.py  api.py  constants.py  exceptions.py  hooks.py  modules.txt  patches.txt  uninstall.py
zkteco_attendance/biometric_attendance_log/: biometric_attendance_log.json  biometric_attendance_log.py
zkteco_attendance/biometric_device/: biometric_device.json  biometric_device.py
zkteco_attendance/biometric_employee_mapping/: __init__.py  biometric_employee_mapping.json  biometric_employee_mapping.py
zkteco_attendance/biometric_sync_log/: biometric_sync_log.json  biometric_sync_log.py
zkteco_attendance/overrides/: __init__.py  employee.py
zkteco_attendance/tasks/: __init__.py  reconciliation_tasks.py  sync_tasks.py
zkteco_attendance/utils/: __init__.py  attendance_processor.py  device_communicator.py  employee_mapper.py  sync_engine.py  validators.py
zkteco_attendance/workspace/biometric_attendance/: biometric_attendance.json
