[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zkteco_attendance"
version = "1.0.0"
description = "ZKTeco Biometric Attendance Integration for ERPNext v15"
authors = [
    {name = "Eslam Zeedan"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyzk>=0.7.6",
    "pytz>=2024.1"
]

[tool.setuptools]
# Explicitly define packages to prevent uv/setuptools directory resolution issues
packages = [
    "zkteco_attendance",
    "zkteco_attendance.utils",
    "zkteco_attendance.tasks",
    "zkteco_attendance.overrides",
    "zkteco_attendance.biometric_device",
    "zkteco_attendance.biometric_employee_mapping",
    "zkteco_attendance.biometric_attendance_log",
    "zkteco_attendance.biometric_sync_log"
]

[tool.setuptools.package-data]
"*" = ["*.json", "*.css", "*.js"]
